apps/media/longhorn/longhorn-ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: longhorn
  namespace: longhorn-system
spec:
  entryPoints:
    - web
  routes:
  - match: Host(`longhorn.catacumbas69.com`)
    kind: Rule
    services:
    - name: longhorn-frontend
      port: 80
#    middlewares:
#    - name: longhorn-strip
